<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_list"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_journal"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/title_Journal" />
    <item
        android:id="@+id/navigation_reminder"
        android:icon="@drawable/reminder"
        android:title="@string/title_reminder" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/expenses"
        android:title="@string/title_expenses" />

</menu>
